--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "hooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "npm lint-staged"
   },
   "dependencies": {
     "express": "^4.17.2",
