--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
-  "hooks": {
-    "pre-commit": "npm lint-staged"
+  "husky" : {
+    "hooks": {
+      "pre-commit": "npm lint-staged"
+    }
   },
   "dependencies": {
     "express": "^4.17.2",
