--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "beautiful":"prettier --single-quote --trailing-comma all --tab-width 4 --write",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/ -o src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,13 +23,13 @@
     "url": "https://github.com/hanguyen12b4/nodejs_blog/issues"
   },
   "homepage": "https://github.com/hanguyen12b4/nodejs_blog#readme",
-  "husky" : {
+  "husky" :{
     "hooks": {
-      "pre-commit": "npm run beautiful"
+      "pre-commit": ["lint-staged", "git add ."]
     }
   },
   "lint-staged": {
-    "src/**/*.{js,json,scss}": 
+    "src/**/*.{js,json,scss}":"prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "dependencies": {
     "express": "^4.17.2",
